tests/lexer/invalid/test_long_identifier.src
this_identifier_is_way_too_long_12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890